# pipex

./: CMakeLists.txt  Makefile  file1  file2  file34  lol.c  pipex
include/: pipex.h
libft/: .gitignore  Makefile  add_str_to_arr.c  free_buf.c  ft_arrlen.c  ft_split.c  libft.h
src/: bonus_heredoc.c  check_path.c  get_next_line.c  get_next_line_utils.c  heredoc.c  init_struct.c  init_struct.d  main.c  parsing.c  parsing.d  pipe.c  pipex.c  utils.c  utils.d
